Fixed game information modal overflowing the browser window on fullscreen ultrawide displays

--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ span {
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(10px);
   max-width: 80vw;
+  max-height: 1000px;
   padding: 20px 20px;
   overflow: hidden;
 }
